﻿1.2
===

New Features:

  * Allow the table of contents to be hidden via a "show/hide" link.
  * Move hard-coded HTML to template files to allow simpler customization of
    images, table of contents, and other elements.
  * Add support for the Mediawiki {{padleft:}} and {{padright:}} parser
    functions.  Usage: "{{padleft:string|amt|padString}}".
  * {{REVISIONMONTH}} is no longer padded ("4" instead of "04") while
    {{REVISIONMONTH1}} has been added in order to match Mediawiki behavior.
  * Remove ability to automatically upgrade from versions prior to 1.0.
  * Upgrade to commons-lang 3.0.1.

Bugfixes:

  * None.

Translation Updates:

  * None.


1.1.1
=====

New Features:

  * None.

Bugfixes:

  * Heading text that started with list tags (example: "#if") were improperly
    being parsed as lists.
  * Spring security 3.0 change how logout redirection is handled.  Update
    JAMWiki to redirect logout properly.  Note that this change modifies
    the applicationContext-security.xml file.  Reported by Leonardo Silva Kury
    Aragão Mendes.
  * Remove the "plainlinks" pattern from the spam blacklist since that CSS
    class is commonly used on Mediawiki sites.
  * Fix parsing of generated template names of the form "{{Name{{if:|1|2}}}}".

Translation Updates:

  * None.


1.1
===

New Features:

  * Support blocking specific users and IP addresses from editing and uploading
    via the new Special:Block, Special:Unblock and Special:BlockList pages.
  * Add optional reCAPTCHA (http://www.google.com/recaptcha) support for
    combatting spam on the Special:Account and Special:Edit pages using CAPTCHA
    challenge-response.
  * Add a honeypot input, similar to Mediawiki, to help deter spambots.
  * Add support for the Mediawiki <gallery> tag for generating image galleries.
  * Add a "Filter search results by namespace" option to the Special:Search
    page.
  * Improve search performance, exclude redirects from search indexing, and